Ajout de la vue repository qui permet d'afficher les commit et les committers. Ajout d'une nouvelle library javascript qui va permettre de faire des Graphics. Ajout de classe qui permette de faire des Graphics.

--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,7 @@
     "jquery": "~2.1.x",
     "bootstrap": "~3.2.x",
     "angular-translate": "~2.2.x",
-    "angular-translate-loader-static-files": "~2.2.x"
+    "angular-translate-loader-static-files": "~2.2.x",
+    "Chart.js": "~1.0.x"
   }
 }
