Division de la page repository committer de la page repository commits. Ajout de Ng-Cookies pour pouvoir enregistrer les recherches déjà faite. Ajout du Service APIGithub qui permet d'alléger les deux controllers. Modification du mot "développé" dans les traductions

--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
     "angular-route": "~1.2.x",
     "angular-resource": "~1.2.x",
     "angular-animate": "~1.2.x",
+    "angular-cookies": "~1.2.x",
     "jquery": "~2.1.x",
     "bootstrap": "~3.2.x",
     "angular-translate": "~2.2.x",
